; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/samples/file/nbio/extr_nbio_test.c_nbio_write_test.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/samples/file/nbio/extr_nbio_test.c_nbio_write_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbio_t = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"test.bin\00", align 1
@NBIO_WRITE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"[ERROR]: nbio_open failed (1)\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"[ERROR]: wrong size (1)\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"[SUCCESS]: Write finished immediately.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @nbio_write_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nbio_write_test() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.nbio_t*, align 8
  store i32 0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %5 = load i32, i32* @NBIO_WRITE, align 4
  %6 = call %struct.nbio_t* @nbio_open(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %5)
  store %struct.nbio_t* %6, %struct.nbio_t** %4, align 8
  %7 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %8 = icmp ne %struct.nbio_t* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = call i32 @puts(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %0
  %12 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %13 = call i32 @nbio_resize(%struct.nbio_t* %12, i32 1048576)
  %14 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %15 = call i8* @nbio_get_ptr(%struct.nbio_t* %14, i64* %1)
  store i8* %15, i8** %3, align 8
  %16 = load i64, i64* %1, align 8
  %17 = icmp ne i64 %16, 1048576
  br i1 %17, label %18, label %20

18:                                               ; preds = %11
  %19 = call i32 @puts(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %11
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @memset(i8* %21, i32 66, i32 1048576)
  %23 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %24 = call i32 @nbio_begin_write(%struct.nbio_t* %23)
  br label %25

25:                                               ; preds = %30, %20
  %26 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %27 = call i32 @nbio_iterate(%struct.nbio_t* %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  br i1 %29, label %30, label %31

30:                                               ; preds = %25
  store i32 1, i32* %2, align 4
  br label %25

31:                                               ; preds = %25
  %32 = load i32, i32* %2, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %36, label %34

34:                                               ; preds = %31
  %35 = call i32 @puts(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0))
  br label %36

36:                                               ; preds = %34, %31
  %37 = load %struct.nbio_t*, %struct.nbio_t** %4, align 8
  %38 = call i32 @nbio_free(%struct.nbio_t* %37)
  ret void
}

declare dso_local %struct.nbio_t* @nbio_open(i8*, i32) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @nbio_resize(%struct.nbio_t*, i32) #1

declare dso_local i8* @nbio_get_ptr(%struct.nbio_t*, i64*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @nbio_begin_write(%struct.nbio_t*) #1

declare dso_local i32 @nbio_iterate(%struct.nbio_t*) #1

declare dso_local i32 @nbio_free(%struct.nbio_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
